nohup.out
/root/script/datacatalogue/script_1.js:20
  await db.collection('person_oosoos').update({ cid: cid }, { : { 'profile': v } });
                                                              ^

SyntaxError: Unexpected token :
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:831:12)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:623:3)
(node:114493) UnhandledPromiseRejectionWarning: ReferenceError: start is not defined
    at /root/script/datacatalogue/script_2400001.js:63:35
    at connectCallback (/root/script/datacatalogue/node_modules/mongodb/lib/mongo_client.js:527:5)
    at /root/script/datacatalogue/node_modules/mongodb/lib/mongo_client.js:449:13
    at process._tickCallback (internal/process/next_tick.js:61:11)
(node:114493) UnhandledPromiseRejectionWarning: Unhandled promise rejection. This error originated either by throwing inside of an async function without a catch block, or by rejecting a promise which was not handled with .catch(). (rejection id: 1)
(node:114493) [DEP0018] DeprecationWarning: Unhandled promise rejections are deprecated. In the future, promise rejections that are not handled will terminate the Node.js process with a non-zero exit code.
